[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Controls.gd" type="Script" id=1]
[ext_resource path="res://assets/temp_tiles.png" type="Texture" id=2]
[ext_resource path="res://assets/visible.svg" type="Texture" id=3]
[ext_resource path="res://scenes/editor/NumEdit.tscn" type="PackedScene" id=4]

[node name="Controls" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
temp = "res://assets/temp_tiles.png"
thick = "res://assets/thick.png"
anim = [ "res://assets/WaterTileAnim1.png", "res://assets/WaterTileAnim2.png", "res://assets/WaterTileAnim3.png", "res://assets/WaterTileAnim4.png", "res://assets/WaterTileAnim5.png", "res://assets/WaterTileAnim6.png", "res://assets/WaterTileAnim7.png", "res://assets/WaterTileAnim8.png", "res://assets/WaterTileAnim9.png", "res://assets/WaterTileAnim10.png", "res://assets/WaterTileAnim11.png", "res://assets/WaterTileAnim12.png" ]

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
margin_right = 420.0
margin_bottom = 300.0
rect_min_size = Vector2( 420, 300 )
popup_exclusive = true
window_title = "Open File(s)"
resizable = true
mode = 1
access = 2
filters = PoolStringArray( "*.png" )
show_hidden_files = true

[node name="SaveFile" type="FileDialog" parent="."]
unique_name_in_owner = true
margin_right = 420.0
margin_bottom = 300.0
rect_min_size = Vector2( 420, 300 )
popup_exclusive = true
window_title = "Open a Directory"
resizable = true
mode = 2
access = 2
show_hidden_files = true

[node name="AcceptDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
margin_right = 83.0
margin_bottom = 58.0
popup_exclusive = true
dialog_text = "Only *.png files are allowed"

[node name="H" type="HBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 168.0
mouse_filter = 2
custom_constants/separation = 0

[node name="Controls" type="MarginContainer" parent="H"]
unique_name_in_owner = true
margin_right = 168.0
margin_bottom = 500.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="H/Controls"]
margin_right = 168.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.243137, 0.231373, 0.27451, 1 )

[node name="M" type="MarginContainer" parent="H/Controls"]
margin_right = 168.0
margin_bottom = 500.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="V" type="VBoxContainer" parent="H/Controls/M"]
margin_left = 10.0
margin_top = 10.0
margin_right = 158.0
margin_bottom = 490.0
mouse_filter = 2
custom_constants/separation = 10

[node name="ChangeFile" type="VBoxContainer" parent="H/Controls/M/V"]
margin_right = 148.0
margin_bottom = 38.0

[node name="CurrentFile" type="Label" parent="H/Controls/M/V/ChangeFile"]
unique_name_in_owner = true
margin_right = 148.0
margin_bottom = 14.0
text = "temp_tiles.png"
align = 1
autowrap = true

[node name="ChangeFile" type="Button" parent="H/Controls/M/V/ChangeFile"]
margin_top = 18.0
margin_right = 148.0
margin_bottom = 38.0
text = "Change File"

[node name="S2" type="HSeparator" parent="H/Controls/M/V"]
margin_top = 48.0
margin_right = 148.0
margin_bottom = 48.0
mouse_filter = 2
custom_constants/separation = 0

[node name="OnTop" type="VBoxContainer" parent="H/Controls/M/V"]
margin_top = 58.0
margin_right = 148.0
margin_bottom = 89.0

[node name="H" type="HBoxContainer" parent="H/Controls/M/V/OnTop"]
margin_right = 148.0
margin_bottom = 31.0

[node name="Label" type="Label" parent="H/Controls/M/V/OnTop/H"]
margin_right = 120.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Keep Window 
on Top"
autowrap = true

[node name="WindowOnTop" type="CheckBox" parent="H/Controls/M/V/OnTop/H"]
margin_left = 124.0
margin_right = 148.0
margin_bottom = 31.0

[node name="S4" type="HSeparator" parent="H/Controls/M/V"]
margin_top = 99.0
margin_right = 148.0
margin_bottom = 99.0
mouse_filter = 2
custom_constants/separation = 0

[node name="CellSize" type="VBoxContainer" parent="H/Controls/M/V"]
margin_top = 109.0
margin_right = 148.0
margin_bottom = 159.0

[node name="Label" type="Label" parent="H/Controls/M/V/CellSize"]
margin_right = 148.0
margin_bottom = 14.0
text = "Cell Size"

[node name="H" type="HBoxContainer" parent="H/Controls/M/V/CellSize"]
margin_top = 18.0
margin_right = 148.0
margin_bottom = 50.0

[node name="CellSizeX" parent="H/Controls/M/V/CellSize/H" instance=ExtResource( 4 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 72.0
margin_bottom = 32.0

[node name="CellSizeY" parent="H/Controls/M/V/CellSize/H" instance=ExtResource( 4 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_right = 148.0
margin_bottom = 32.0

[node name="S5" type="HSeparator" parent="H/Controls/M/V"]
margin_top = 169.0
margin_right = 148.0
margin_bottom = 169.0
mouse_filter = 2
custom_constants/separation = 0

[node name="SubtileSize" type="VBoxContainer" parent="H/Controls/M/V"]
margin_top = 179.0
margin_right = 148.0
margin_bottom = 229.0

[node name="Label" type="Label" parent="H/Controls/M/V/SubtileSize"]
margin_right = 148.0
margin_bottom = 14.0
text = "Subtile Size"

[node name="H" type="HBoxContainer" parent="H/Controls/M/V/SubtileSize"]
margin_top = 18.0
margin_right = 148.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( -74, 58 )

[node name="SubtileSizeX" parent="H/Controls/M/V/SubtileSize/H" instance=ExtResource( 4 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 72.0
margin_bottom = 32.0

[node name="SubtileSizeY" parent="H/Controls/M/V/SubtileSize/H" instance=ExtResource( 4 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_right = 148.0
margin_bottom = 32.0

[node name="S6" type="HSeparator" parent="H/Controls/M/V"]
margin_top = 239.0
margin_right = 148.0
margin_bottom = 239.0
mouse_filter = 2
custom_constants/separation = 0

[node name="DisplayGrid" type="VBoxContainer" parent="H/Controls/M/V"]
margin_top = 249.0
margin_right = 148.0
margin_bottom = 301.0

[node name="V" type="VBoxContainer" parent="H/Controls/M/V/DisplayGrid"]
margin_right = 148.0
margin_bottom = 24.0

[node name="H" type="HBoxContainer" parent="H/Controls/M/V/DisplayGrid/V"]
margin_right = 148.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="H/Controls/M/V/DisplayGrid/V/H"]
margin_top = 5.0
margin_right = 94.0
margin_bottom = 19.0
text = "Grid on Mouse"

[node name="MouseGrid" type="CheckBox" parent="H/Controls/M/V/DisplayGrid/V/H"]
margin_left = 124.0
margin_right = 148.0
margin_bottom = 24.0
size_flags_horizontal = 10
pressed = true

[node name="MouseStrength" type="HSlider" parent="H/Controls/M/V/DisplayGrid/V"]
visible = false
margin_top = 28.0
margin_right = 148.0
margin_bottom = 44.0
max_value = 1.4
step = 0.1
value = 0.7
tick_count = 5

[node name="V2" type="VBoxContainer" parent="H/Controls/M/V/DisplayGrid"]
margin_top = 28.0
margin_right = 148.0
margin_bottom = 52.0

[node name="H2" type="HBoxContainer" parent="H/Controls/M/V/DisplayGrid/V2"]
margin_right = 148.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="H/Controls/M/V/DisplayGrid/V2/H2"]
margin_top = 5.0
margin_right = 81.0
margin_bottom = 19.0
text = "Grid on Tiles"

[node name="TilesGrid" type="CheckBox" parent="H/Controls/M/V/DisplayGrid/V2/H2"]
margin_left = 124.0
margin_right = 148.0
margin_bottom = 24.0
size_flags_horizontal = 10
pressed = true

[node name="TilesStrength" type="HSlider" parent="H/Controls/M/V/DisplayGrid/V2"]
visible = false
margin_top = 28.0
margin_right = 148.0
margin_bottom = 44.0
max_value = 1.4
step = 0.1
value = 0.7
tick_count = 5

[node name="S3" type="HSeparator" parent="H/Controls/M/V"]
margin_top = 311.0
margin_right = 148.0
margin_bottom = 311.0
mouse_filter = 2
custom_constants/separation = 0

[node name="Presets" type="VBoxContainer" parent="H/Controls/M/V"]
margin_top = 321.0
margin_right = 148.0
margin_bottom = 359.0

[node name="Label" type="Label" parent="H/Controls/M/V/Presets"]
margin_right = 148.0
margin_bottom = 14.0
text = "Load Examples"
align = 1

[node name="H" type="HBoxContainer" parent="H/Controls/M/V/Presets"]
margin_top = 18.0
margin_right = 148.0
margin_bottom = 38.0

[node name="Temp" type="Button" parent="H/Controls/M/V/Presets/H"]
margin_right = 48.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Temp"

[node name="Thick" type="Button" parent="H/Controls/M/V/Presets/H"]
margin_left = 52.0
margin_right = 98.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Thick"

[node name="Anim" type="Button" parent="H/Controls/M/V/Presets/H"]
margin_left = 102.0
margin_right = 148.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Anim"

[node name="S8" type="HSeparator" parent="H/Controls/M/V"]
margin_top = 369.0
margin_right = 148.0
margin_bottom = 369.0
mouse_filter = 2
custom_constants/separation = 0

[node name="Download" type="VBoxContainer" parent="H/Controls/M/V"]
margin_top = 379.0
margin_right = 148.0
margin_bottom = 417.0

[node name="Label" type="Label" parent="H/Controls/M/V/Download"]
margin_right = 148.0
margin_bottom = 14.0
text = "Save and Load"
align = 1
autowrap = true

[node name="H" type="HBoxContainer" parent="H/Controls/M/V/Download"]
margin_top = 18.0
margin_right = 148.0
margin_bottom = 38.0

[node name="Temp" type="Button" parent="H/Controls/M/V/Download/H"]
margin_right = 48.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Temp"

[node name="Thick" type="Button" parent="H/Controls/M/V/Download/H"]
margin_left = 52.0
margin_right = 98.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Thick"

[node name="Anim" type="Button" parent="H/Controls/M/V/Download/H"]
margin_left = 102.0
margin_right = 148.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Anim"

[node name="S7" type="HSeparator" parent="H/Controls/M/V"]
margin_top = 427.0
margin_right = 148.0
margin_bottom = 427.0
mouse_filter = 2
custom_constants/separation = 0

[node name="FPS" type="HBoxContainer" parent="H/Controls/M/V"]
unique_name_in_owner = true
margin_top = 437.0
margin_right = 148.0
margin_bottom = 469.0

[node name="Label" type="Label" parent="H/Controls/M/V/FPS"]
margin_top = 9.0
margin_right = 22.0
margin_bottom = 23.0
text = "FPS"

[node name="FPS" parent="H/Controls/M/V/FPS" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_right = 148.0
margin_bottom = 32.0
size_flags_horizontal = 10
num = 10
min_num = 0

[node name="ToggleVisibility" type="Button" parent="H"]
unique_name_in_owner = true
show_behind_parent = true
margin_left = 168.0
margin_right = 196.0
margin_bottom = 22.0
size_flags_vertical = 0
icon = ExtResource( 3 )

[node name="GetModifiedTime" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="M2" type="MarginContainer" parent="."]
show_behind_parent = true
anchor_left = 1.0
anchor_right = 1.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
rect_scale = Vector2( -1, 1 )
mouse_filter = 2

[node name="TilesTexture" type="TextureRect" parent="M2"]
unique_name_in_owner = true
show_behind_parent = true
margin_right = 200.0
margin_bottom = 200.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
size_flags_horizontal = 11
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
flip_h = true

[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
[connection signal="dir_selected" from="SaveFile" to="." method="_on_SaveFile_dir_selected"]
[connection signal="pressed" from="H/Controls/M/V/ChangeFile/ChangeFile" to="." method="_on_ChangeFile_pressed"]
[connection signal="toggled" from="H/Controls/M/V/OnTop/H/WindowOnTop" to="." method="_on_WindowOnTop_toggled"]
[connection signal="number_changed" from="H/Controls/M/V/CellSize/H/CellSizeX" to="." method="_on_CellSizeX_number_changed"]
[connection signal="number_changed" from="H/Controls/M/V/CellSize/H/CellSizeY" to="." method="_on_CellSizeY_number_changed"]
[connection signal="number_changed" from="H/Controls/M/V/SubtileSize/H/SubtileSizeX" to="." method="_on_SubtileSizeX_number_changed"]
[connection signal="number_changed" from="H/Controls/M/V/SubtileSize/H/SubtileSizeY" to="." method="_on_SubtileSizeY_number_changed"]
[connection signal="toggled" from="H/Controls/M/V/DisplayGrid/V/H/MouseGrid" to="." method="_on_MouseGrid_toggled"]
[connection signal="value_changed" from="H/Controls/M/V/DisplayGrid/V/MouseStrength" to="." method="_on_MouseStrength_value_changed"]
[connection signal="toggled" from="H/Controls/M/V/DisplayGrid/V2/H2/TilesGrid" to="." method="_on_TilesGrid_toggled"]
[connection signal="value_changed" from="H/Controls/M/V/DisplayGrid/V2/TilesStrength" to="." method="_on_TilesStrength_value_changed"]
[connection signal="pressed" from="H/Controls/M/V/Presets/H/Temp" to="." method="_on_PresetsTemp_pressed"]
[connection signal="pressed" from="H/Controls/M/V/Presets/H/Thick" to="." method="_on_PresetsThick_pressed"]
[connection signal="pressed" from="H/Controls/M/V/Presets/H/Anim" to="." method="_on_PresetsAnim_pressed"]
[connection signal="pressed" from="H/Controls/M/V/Download/H/Temp" to="." method="_on_DownloadTemp_pressed"]
[connection signal="pressed" from="H/Controls/M/V/Download/H/Thick" to="." method="_on_DownloadThick_pressed"]
[connection signal="pressed" from="H/Controls/M/V/Download/H/Anim" to="." method="_on_DownloadAnim_pressed"]
[connection signal="number_changed" from="H/Controls/M/V/FPS/FPS" to="." method="_on_FPS_number_changed"]
[connection signal="pressed" from="H/ToggleVisibility" to="." method="_on_ToggleVisibility_pressed"]
[connection signal="timeout" from="GetModifiedTime" to="." method="_on_GetModifiedTime_timeout"]
